[tool.poetry]
name = "mc-server-info-mcdr"
version = "0.1.0"
description = "Simply get server info in MCDReforged and connect NoneBot2 to send data to QQ."
authors = ["MingxuanGame <MingxuanGame@outlook.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
MCDReforged = "1.6"
websockets = "^10.3"
pydantic = "^1.9.1"
mcstatus = "^9.0.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.black]
line-length = 79
target-version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
